Make it work with python3 (and keep it working with python2)

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,7 +3,7 @@ include COPYING
 include ChangeLog
 include Makefile
 include MANIFEST.in
-include test_cases.txt
+include test_cases.py
 include run_test_cases
 include main.py
 recursive-include tools *
